<resources>
    <string name="app_name">FastRecipes</string>
    <string name="strqqc">Búsqueda \nde recetas</string>
    <string name="strFilters">AÑADIR FILTROS</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="name">Nombre completo</string>
    <string name="register">Registrarse</string>
    <string name="forget_pass">Olvidé mi contraseña</string>
    <string name="login_error">E-mail o contraseña incorrecto.</string>
    <string name="singin">Iniciar sesión</string>
    <string name="access">Acceder</string>
    <string name="myrecipes">Mis recetas</string>
    <string name="mycomments">Mis Comentarios</string>
    <string name="accept">Aceptar</string>
    <string name="back">Atrás</string>
    <string name="minutes">minutos</string>
    <string name="commentrecipe">Comenta esta receta</string>
    <string name="send">Enviar</string>
    <string name="published_recipes">Recetas publicadas</string>
    <string name="camera">Cámara</string>
    <string name="gallery">Galería</string>
    <string name="source">Fuente:</string>
    <string name="rate">Valorar</string>
    <string name="bad">¡Mal!</string>
    <string name="titleSaveUser">¿Recordar usuario?</string>
    <string name="emptyMyRecs">Aún no has publicado recetas.</string>
    <string name="favourites">Recetas favoritas</string>
    <string name="empty_favs">No has añadido ninguna receta a favoritos.</string>
    <string name="nameAuthorTile">Autor de esta receta</string>
    <string name="add_quantity">Añade la cantidad</string>
    <string name="addrecipe">Añadir receta</string>
    <string name="searchRes">Resultado de búsqueda</string>
    <string name="norecipes">No hay recetas que coincidan con tu búsqueda</string>
    <string name="time">Tiempo</string>
    <string name="difficulty">Tiempo</string>
    <string name="searchIngre">Buscar ingredientes</string>
    <string name="dontrem">No recordar</string>
    <string name="rem">Recordar</string>
    <string name="nofavs">Nadie a marcado esta receta como favorita.</string>
    <string name="favs">Favoritos</string>
    <string name="nointernet">No hay conexión de red.</string>
    <string name="recipepublished">La receta ha sido publicada correctamente.</string>
    <string name="updatedrecipe">Receta actualizada.</string>
    <string name="updatedprofile">Perfil actualizado.</string>
    <string name="delete">Eliminar</string>
    <string name="sendEmailVerification">Reenviar correo</string>
    <string name="credits">Créditos</string>
    <string name="rememberuser">Recordar usuario</string>
    <string name="version">Versión</string>
    <string name="terms">Términos y condiciones</string>
    <string name="about">Acerca de...</string>
    <string name="recipeday">Receta rápida del día</string>
    <string name="textProm">¿Buscas algo más concreto? Añade filtros a la búsqueda y... ¡a cocinar!</string>
    <string name="withingredients">Con los ingredientes:</string>
    <string name="withoutin">Que no contenga:</string>
    <string name="notverified">E-mail no verificado, algunas funciones están deshabilitadas</string>
    <string-array name="categories_array">
        <item>Bebidas y cóckteles</item>
        <item>Arroces y cereales</item>
        <item>Verduras</item>
        <item>Dulces y postres</item>
        <item>Sopas y cremas</item>
        <item>Carnes</item>
        <item>Frutos secos</item>
        <item>Pescados y mariscos</item>
        <item>Frutas</item>
        <item>Pastas y pizzas</item>
        <item>Lácteos</item>
        <item>Aperitivos</item>
        <item>Para llevar</item>
    </string-array>
    <string-array name="ingredients">
        <item>Albahaca</item>
        <item>Anís</item>
        <item>Apio</item>
        <item>Azafrán</item>
        <item>Páprika</item>
        <item>Jamón</item>
        <item>Chorizo</item>

        <item>Canela</item>
        <item>Cardamomo</item>
        <item>Cebolla deshidratada</item>
        <item>Cebollino</item>
        <item>Cilantro</item>
        <item>Clavo</item>
        <item>Comino</item>
        <item>Cúrcuma</item>
        <item>Enebro</item>
        <item>Estragón</item>
        <item>Habas</item>
        <item>Hierbabuena</item>
        <item>Hinojo</item>
        <item>Jengibre</item>
        <item>Laurel</item>
        <item>Mango</item>
        <item>Mejorana</item>
        <item>Menta</item>
        <item>Mostaza</item>
        <item>Nueces</item>
        <item>Nuez moscada</item>
        <item>Orégano</item>
        <item>Perejil</item>
        <item>Pimentón</item>
        <item>Pimienta negra</item>
        <item>Pimienta blanca</item>
        <item>Pimienta verde</item>
        <item>Romero</item>
        <item>Sal</item>
        <item>Salvia</item>
        <item>Sésamo</item>
        <item>Tamarindo</item>
        <item>Tomillo</item>
        <item>Vainilla</item>
        <item>Curry</item>
        <item>Aceite de almendras</item>
        <item>Aceite de coco</item>
        <item>Aceite de soja</item>
        <item>Aceite de oliva</item>
        <item>Agua</item>
        <item>Agua de azahar</item>
        <item>Ajo en polvo</item>
        <item>Ajo negro</item>
        <item>Ajo</item>
        <item>Almidón</item>
        <item>Anacardos</item>
        <item>Arroz</item>
        <item>Azúcar de palma</item>
        <item>Azúcar blanco</item>
        <item>Azúcar moreno</item>
        <item>Brotes de soja</item>
        <item>Castañas</item>
        <item>Cebolla</item>
        <item>Chile</item>
        <item>Coco</item>
        <item>Cuscús</item>
        <item>Nata</item>
        <item>Levadura</item>
        <item>Leche</item>
        <item>Queso</item>
        <item>Cuajada</item>
        <item>Coles de bruselas</item>
        <item>Alubias</item>
        <item>Garbanzos</item>
        <item>Lentejas</item>
        <item>Soja</item>
        <item>Patatas</item>
        <item>Lechuga</item>
        <item>Acelgas</item>
        <item>Alcachofas</item>
        <item>Batatas</item>
        <item>Berenjenas</item>
        <item>Brócoli</item>
        <item>Brécol</item>
        <item>Calabacín</item>
        <item>Calabaza</item>
        <item>Cardo</item>
        <item>Cebolleta</item>
        <item>Coliflor</item>
        <item>Envidia</item>
        <item>Tomates</item>
        <item>Zanahorias</item>
        <item>Escarola</item>
        <item>Espinacas</item>
        <item>Espárragos</item>
        <item>Guisantes</item>
        <item>Judías</item>
        <item>Maíz</item>
        <item>Palmito</item>
        <item>Pepino</item>
        <item>Pimiento</item>
        <item>Puerro</item>
        <item>Remolacha</item>
        <item>Miel</item>
        <item>Albaricoque</item>
        <item>Aguacate</item>
        <item>Cereza</item>
        <item>Mango</item>
        <item>Melocotón</item>
        <item>Nectarina</item>
        <item>Ciruelas</item>
        <item>Frutas del bosque</item>
        <item>Membrillo</item>
        <item>Peras</item>
        <item>Manzanas</item>
        <item>Uvas</item>
        <item>Frambuesa</item>
        <item>Fresa</item>
        <item>Granada</item>
        <item>Higos</item>
        <item>Kiwi</item>
        <item>Limón</item>
        <item>Mandarina</item>
        <item>Melón</item>
        <item>Naranja</item>
        <item>Piña</item>
        <item>Plátano</item>
        <item>Pomelo</item>
        <item>Sandía</item>
        <item>Pasta</item>
        <item>Atún</item>
        <item>Anchoa</item>
        <item>Bacalao</item>
        <item>Bonito</item>
        <item>Boquerón</item>
        <item>Caballa</item>
        <item>Chicharro</item>
        <item>Corvina</item>
        <item>Dorada</item>
        <item>Lenguado</item>
        <item>Lubina</item>
        <item>Brócoli</item>
        <item>Repollo</item>
        <item>Champiñones</item>
        <item>Berza</item>
        <item>Chirimoya</item>
        <item>Berza</item>
        <item>Papaya</item>
        <item>Pasiflora</item>
        <item>Gelatina</item>
        <item>Rúcula</item>
        <item>Fruta de la pasión</item>
        <item>Setas</item>
        <item>Merluza</item>
        <item>Mero</item>
        <item>Palometa</item>
        <item>Pejerrey</item>
        <item>Rape</item>
        <item>Rodaballo</item>
        <item>Salmón</item>
        <item>Sardina</item>
        <item>Trucha</item>
        <item>Camarón</item>
        <item>Cigalas</item>
        <item>Gambas</item>
        <item>Langostinos</item>
        <item>Percebes</item>
        <item>Almejas</item>
        <item>Calamares</item>
        <item>Mejillones</item>
        <item>Ostras</item>
        <item>Pulpo</item>
        <item>Sepia</item>
        <item>Vieira</item>
        <item>Cordero</item>
        <item>Oveja</item>
        <item>Ternera</item>
        <item>Buey</item>
        <item>Caballo</item>
        <item>Cabra</item>
        <item>Cerdo</item>
        <item>Vaca</item>
        <item>Avestruz</item>
        <item>Perdiz</item>
        <item>Pato</item>
        <item>Pavo</item>
        <item>Oca</item>
        <item>Gallina</item>
        <item>Pollo</item>
        <item>Huevo</item>
        <item>Yema de Huevo</item>
        <item>Clara de huevo</item>
        <item>Conejo</item>
        <item>Liebre</item>
        <item>Ciervo</item>
        <item>Jabalí</item>
        <item>Faisán</item>
        <item>Ancas de rana</item>
        <item>Caracoles</item>
        <item>Cerveza</item>
        <item>Vino blanco</item>
        <item>Sidra</item>
        <item>Vino tinto</item>
        <item>Vino rosado</item>
        <item>Whisky</item>
        <item>Ron</item>
        <item>Vodka</item>
        <item>Ginebra</item>
        <item>Café</item>
        <item>Zumo de naranja</item>
        <item>Té</item>
        <item>Almendras</item>
        <item>Avellanas</item>
        <item>Cacahuetes</item>
        <item>Nueces de Macadamia</item>
        <item>Piñones</item>
        <item>Pistachos</item>
        <item>Dátiles</item>
        <item>Pasas</item>
        <item>Harina de trigo</item>
        <item>Escanda</item>
        <item>Harina de centeno</item>
        <item>Harina de espelta</item>
        <item>Sémola de trigo</item>
        <item>Sémola de maíz</item>
        <item>Harina de maíz</item>
        <item>Avena</item>
        <item>Harina de trigo</item>
        <item>Macarrones</item>
        <item>Espaguetis</item>
        <item>Tallarines</item>
        <item>Zumo de limón</item>
        <item>Tabasco</item>
        <item>Mantequilla </item>
        <item>Margarina</item>
        <item>Aceitunas</item>
        <item>Ketchup</item>
        <item>Vinagre blanco</item>
        <item>Vinagre balsámico</item>
        <item>Vinagre de manzana</item>
        <item>Vinagre de arroz</item>
        <item>Vinagre de Jerez</item>
        <item>Cacao</item>
        <item>Queso fresco</item>
        <item>Sal gorda</item>
        <item>Ralladura de limón</item>
        <item>Bizcocho</item>
        <item>Masa de hojaldre</item>
        <item>Cebada perlada</item>
        <item>Quinoa</item>
        <item>Masa quebrada</item>
        <item>Masa filo</item>


    </string-array>
    <string-array name="diff_array">
        <item>Fácil</item>
        <item>Media</item>
        <item>Difícil</item>
    </string-array>
</resources>