<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
<RelativeLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ismael.fastrecipes.LoginActivity"
  >

    <RelativeLayout
        android:id="@+id/login_data_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/pgbLoading"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:visibility="gone"
        android:layout_alignParentBottom="true"
        />

    <android.support.v7.widget.CardView
        android:id="@+id/crvIcon"
        android:layout_width="match_parent"
        android:layout_height="150dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <ImageView
            android:id="@+id/imgIcon"
            android:contentDescription="@string/app_name"
            android:layout_width="match_parent"
            android:background="@color/ic_launcher_background_testing"
            android:layout_height="match_parent"
            android:src="@drawable/iconbig"/>


        </RelativeLayout>

    </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/logintitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/crvIcon"
            android:layout_marginTop="@dimen/hbLines"
            android:text="@string/singin"
            android:textSize="20sp"
            android:layout_centerHorizontal="true"
            />
    <android.support.design.widget.TextInputLayout
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/hbLines"
        android:layout_below="@id/logintitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tilMailLogin"
        android:hint="@string/email"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edtMailLogin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilPasswordLogin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tilMailLogin"
        android:hint="@string/password">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edtPasswordLogin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword" />

    </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilForgetPass"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"
            android:layout_below="@id/tilPasswordLogin">

            <TextView
                android:textColor="@android:color/holo_blue_light"
                android:id="@+id/txvForgetPass"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:text="@string/forget_pass" />

        </android.support.design.widget.TextInputLayout>


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/profile_image"
        android:layout_below="@id/tilPasswordLogin">

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/btnEntry"
            android:background="@drawable/bg_button"
            android:drawableStart="@drawable/ic_enter"
            android:paddingStart="64dp"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:textColor="@color/textColorPrimary"
            android:text="@string/access"
            android:layout_gravity="center"/>


        <Button
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/btnRegister"
            android:background="@drawable/bg_button"
            android:drawableStart="@drawable/ic_registration"
            android:paddingStart="64dp"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:textColor="@color/textColorPrimary"
            android:text="@string/register"
            android:layout_gravity="center"/>
    </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
</ScrollView>