<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ic_launcher_background_testing"

    xmlns:android="http://schemas.android.com/apk/res/android" >
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/ic_launcher_background_testing"
    tools:context="com.ismael.profinder.RegisterActivity">



    <android.support.v7.widget.CardView
        android:id="@+id/crvIconR"
        android:layout_width="match_parent"
        android:layout_height="120dp">

            <ImageView
                android:id="@+id/imgIconR"
                android:contentDescription="@string/app_name"
                android:background="@color/ic_launcher_background_testing"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/iconbig"/>
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/regTit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/crvIconR"
        android:layout_marginTop="@dimen/textPageBorder"
        android:text="@string/register"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        />

    <android.support.design.widget.TextInputLayout
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/hbLines"
        android:layout_width="match_parent"
        android:layout_below="@+id/regTit"
        android:background="@drawable/border"
        android:layout_height="wrap_content"
        android:id="@+id/tilNameRegister"
        android:hint="@string/name">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="12sp"
            android:id="@+id/edtNameRegister" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tilNameRegister"
        android:id="@+id/tilEmailRegister"
        android:background="@drawable/border"
        android:hint="@string/email">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="12sp"
            android:id="@+id/edtEmailRegister" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:id="@+id/llpass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/tilEmailRegister"
        >
    <android.support.design.widget.TextInputLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tilPasswordRegister"
        android:background="@drawable/border"
        android:hint="@string/password"
        android:layout_weight="2">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:inputType="textPassword"
            android:id="@+id/edtPasswordRegister" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnSeePass"
        android:background="@drawable/bg_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:layout_marginStart="@dimen/hbLines"
        android:drawableStart="@drawable/ic_add"
        />
    </LinearLayout>

        <Button
            android:layout_below="@+id/llpass"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:id="@+id/btnAceptRegister"
            android:layout_marginStart="15dp"
            android:layout_marginTop="@dimen/textPageBorder"
            android:background="@drawable/bg_button"
            android:layout_centerHorizontal="true"
            android:text="@string/register"/>




</RelativeLayout>
</ScrollView>